--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,1 @@
-{{page-title "ShoppingCart"}}
-
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
-
-{{outlet}}
+<h1>Hello Ember </h1>
