feat: general-container component
> ember g component general-container

* Share shopping cart icon between index and item pages

--- a/app/templates/item.hbs
+++ b/app/templates/item.hbs
@@ -1,2 +1,5 @@
-{{page-title "Item"}}
-{{outlet}}
+{{page-title 'Item'}}
+
+<GeneralContainer>
+  <h1>Item {{this.model}} page</h1>
+</GeneralContainer>
