--- a/app/components/product/details.hbs
+++ b/app/components/product/details.hbs
@@ -1,6 +1,6 @@
 <div class='product-details'>
   <section>
-    <h3>Beats Solo Wireless Headphones</h3>
+    <h3>{{@name}}</h3>
     <div class='text-warning'>
       <i class='fa fa-star'></i>
       <i class='fa fa-star'></i>
@@ -10,23 +10,23 @@
     </div>
   </section>
 
-  <section>
-    <del class='small text-black-50'>$199.95</del>
-    <i class='text-danger fw-bold'>$99.98</i>
+  <section class={{unless @isDetails 'h4'}}>
+    <del class='small text-black-50'>{{currency @price.original}}</del>
+    <i class='text-danger fw-bold'>{{currency @price.current}}</i>
   </section>
 
-  <div>
-    <h5>Color</h5>
-    <div class='product-colors active-{{@color}}'>
-      {{! template-lint-disable no-invalid-interactive }}
-      <span
-        class='product-color color-red'
-        {{on 'click' (fn @onChangeColor 'red')}}
-      ></span>
-      <span
-        class='product-color color-black'
-        {{on 'click' (fn @onChangeColor 'black')}}
-      ></span>
+  {{#if @isDetail}}
+    <div>
+      <h5>Color</h5>
+      <div class='product-colors active-{{@color}}'>
+        {{! template-lint-disable no-invalid-interactive }}
+        {{#each @colors as |colorInfo|}}
+          <span
+            class='product-color {{concat "color-" colorInfo.color}}'
+            {{on 'click' (fn @onChangeColor colorInfo.color)}}
+          ></span>
+        {{/each}}
+      </div>
     </div>
-  </div>
+  {{/if}}
 </div>
