--- a/app/templates/cart.hbs
+++ b/app/templates/cart.hbs
@@ -15,15 +15,15 @@
   <section class='w-50 ms-auto text-end mb-5'>
     <div class='row'>
       <span class='col'>Sub Total</span>
-      <span class='col'>{{this.subTotal}}</span>
+      <span class='col'>{{currency this.subTotal}}</span>
     </div>
     <div class='row'>
       <span class='col'>Tax</span>
-      <span class='col'>{{this.tax}}</span>
+      <span class='col'>{{currency this.tax}}</span>
     </div>
     <div class='row'>
       <span class='col'>Total</span>
-      <span class='col'>{{this.total}}</span>
+      <span class='col'>{{currency this.total}}</span>
     </div>
   </section>
   <button type='button' class='btn btn-success float-end'>Checkout</button>
