--- a/app/components/product/image.hbs
+++ b/app/components/product/image.hbs
@@ -1,3 +1,4 @@
-<div class='product-image'>
+{{! template-lint-disable no-invalid-interactive }}
+<div class='product-image' {{on 'click' @toggleZoom}}>
   <img src={{@src}} alt='phone' />
 </div>
