--- a/app/styles/_product.scss
+++ b/app/styles/_product.scss
@@ -7,6 +7,8 @@
   align-items: center;
   justify-content: center;
 
+  transition: width 0.3s ease-in-out;
+
   > img {
     max-width: 100%;
     max-height: 100%;
@@ -20,6 +22,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  transition: width 0.3s ease-in-out;
 
   .product-color {
     display: inline-block;
@@ -73,6 +76,16 @@
   &:hover {
     text-decoration: none;
     color: #333;
+  }
+
+  &.is-zoomed {
+    .product-image {
+      width: 100%;
+    }
+    .product-details {
+      width: 0;
+      padding: 0;
+    }
   }
 }
 
