--- a/app/styles/_homepage.scss
+++ b/app/styles/_homepage.scss
@@ -24,4 +24,16 @@
   &:hover {
     color: darken(grey, 10%);
   }
+
+  .cart-count {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 14px;
+    color: white;
+    background-color: red;
+    border-radius: 50%;
+    height: 20px;
+    width: 20px;
+  }
 }
