--- a/app/templates/cart.hbs
+++ b/app/templates/cart.hbs
@@ -12,6 +12,13 @@
       Shopping Cart
     </li>
   </ol>
+
+  {{#each this.cart.itemList as |item|}}
+    <div class='d-flex align-items-center'>
+      <h4>{{item.name}}</h4>
+    </div>
+  {{/each}}
+
   <section class='w-50 ms-auto text-end mb-5'>
     <div class='row'>
       <span class='col'>Sub Total</span>
