--- a/app/components/general-container.hbs
+++ b/app/components/general-container.hbs
@@ -4,7 +4,7 @@
     <span
       class='cart-count d-inline-flex justify-content-center align-items-center'
     >
-      {{this.shoppingCart.itemList.length}}
+      {{this.itemCount}}
     </span>
   {{/if}}
 </LinkTo>
