fix: cart-item-thumbnail height

--- a/app/styles/_cart.scss
+++ b/app/styles/_cart.scss
@@ -1,7 +1,7 @@
 .cart-item {
   > .cart-item-thumbnail {
     width: 200px;
-    width: 150px;
+    height: 150px;
     text-align: center;
     > img {
       max-width: 100%;
